# rrr-tui

./: .envrc  Cargo.toml  LICENSE  README.md  mockup.html  mockup.txt
.github/workflows/: cd.yml
src/: action.rs  animation.rs  app.rs  args.rs  cbor.rs  cli.rs  color.rs  component.rs  config.rs  env.rs  error.rs  errors.rs  geometry.rs  layout.rs  logging.rs  main.rs  rect.rs  tui.rs
src/components/: button.rs  checkbox.rs  input_field.rs  layout_placeholder.rs  main_view.rs  mod.rs  open_status.rs  pane.rs  radio_array.rs  scroll_pane.rs  spinner_field.rs  styled_widget.rs  text_block.rs
src/components/main_view/: mod.rs  pane_content.rs  pane_open.rs
src/components/main_view/panes/: content.rs  metadata.rs  mod.rs  open.rs  overview.rs  tree.rs
src/widgets/: line_spacer.rs  mod.rs
