[package]
name = "rrr-tui-3"
version = "0.1.0"
edition = "2021"
description = "RRR TUI"
authors = ["Jakub Hlusička <Limeth@users.noreply.github.com>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
opentelemetry = ["dep:opentelemetry", "opentelemetry-otlp", "tracing-opentelemetry", "opentelemetry_sdk"]
tracy = ["dep:tracing-tracy"]

[dependencies]
accesskit = "0.18.0"
better-panic = "0.3.0"
clap = { version = "4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.15.11"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
derive_deref = "1.1"
directories = "6.0"
futures = "0.3.31"
human-panic = "2.0"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
pretty_assertions = "1.4"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tracing-appender = "0.2.3"
polonius-the-crab = "0.4.2"
rrr = { git = "https://github.com/recursive-record-registry/rrr.git", rev = "9b495e4b0d29f303ad5586b0d21884f7ee840a04" }

# Feature opentelemetry
opentelemetry-otlp = { version = "0.29.0", optional = true }
opentelemetry = { version = "0.29.0", optional = true }
tracing-opentelemetry = { version = "0.30.0", optional = true }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"], optional = true }

# Feature tracy
tracing-tracy = { version = "0.11.4", optional = true }
itertools = "0.14.0"
kolor = "0.1.9"

[build-dependencies]
anyhow = "1.0"
vergen-gix = { version = "1.0", features = ["build", "cargo"] }
