[package]
name = "rrr-tui"
version = "0.1.0"
edition = "2024"
description = "RRR TUI"
authors = ["Jakub Hlusička <Limeth@users.noreply.github.com>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
default = []
opentelemetry = ["dep:opentelemetry", "opentelemetry-otlp", "tracing-opentelemetry", "opentelemetry_sdk"]
tracy = ["dep:tracing-tracy"]
debug = []

[dependencies]
# Feature opentelemetry
opentelemetry = { version = "0.29.0", optional = true }
opentelemetry-otlp = { version = "0.29.0", optional = true }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.30.0", optional = true }

# Feature tracy
tracing-tracy = { version = "0.11.4", optional = true }

accesskit = "0.18.0"
better-panic = "0.3.0"
clap = { version = "4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.15.11"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
derive_deref = "1.1"
directories = "6.0"
easing-function = "0.1.1"
futures = "0.3.31"
human-panic = "2.0"
itertools = "0.14.0"
json5 = "0.4.1"
kolor = "0.1.9"
konst = "0.3.16"
lazy_static = "1.5.0"
libc = "0.2.161"
nalgebra = "0.33.2"
num-traits = "0.2.19"
polonius-the-crab = "0.4.2"
pretty_assertions = "1.4"
ratatui = { version = "0.29.0", features = ["serde", "macros", "unstable-widget-ref"] }
rrr = { git = "https://github.com/recursive-record-registry/rrr.git", rev = "6f8352238c55c191f28f71d8506b6cce104fc4b5" }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
signal-hook = "0.3.17"
simba = "0.9.0"
static_assertions = "1.1.0"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.27.1", features = ["derive"] }
taffy = "0.8.0"
textwrap = "0.16.2"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }

[build-dependencies]
anyhow = "1.0"
vergen-gix = { version = "1.0", features = ["build", "cargo"] }
